--- a/public/styles.css
+++ b/public/styles.css
@@ -85,12 +85,10 @@ body {
 .container-user-img {
     width: 50px;
     height: 50px;
-    border-radius: 50%;
-    background: url(./assets/img/user.png);
-    background-size: cover;
-    background-position-x: center;
-    background-position-y: center;
+    position: relative;
     margin: unset;
+    border-radius: 50%;
+    background-color: white;
 }
 
 .button-notifications {
@@ -180,7 +178,7 @@ body {
 .nav-bar {
     background: rgb(196, 74, 53);
     background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
-    width: 100%;
+    width: 100vw;
     height: 2.5rem;
     display: flex;
     justify-content: space-around;
@@ -403,6 +401,8 @@ legend {
     margin: auto;
     width: 100px;
     height: 100px;
+    border-radius: 50%;
+    background-color: white;
 }
 
 .user-image {
@@ -515,7 +515,6 @@ a {
 
 .button-google {
     background: gray;
-
     border: none;
     padding: 0.75rem;
     border-radius: 1.75rem;
@@ -534,6 +533,7 @@ a {
 
 .modal-content {
     background-color: var(--background-color) !important;
+    color: var(--font-color-one) !important;
 }
 
 .modal-body-event {
@@ -558,6 +558,7 @@ a {
     border-radius: 1.5rem !important;
     border: 3px solid #5fa19991 !important;
     background-color: transparent !important;
+   
 }
 
 .normalize-h {
@@ -617,13 +618,96 @@ input[type="submit"] {
 }
 
 .text-register {
-    margin: 1rem;
+    margin: 1rem 0;
 }
 
 .span-gray {
     color: var(--font-color-two);
     text-align: center;
     display: block;
+}
+
+.card-comment {
+    width: 90%;
+    border: var(--border);
+    border-radius: 1rem;
+    background-color: var(--background-color-two);
+    box-shadow: var(--color-shadow);
+    margin: auto;
+    padding: 1rem;
+    margin-bottom: 1rem;
+
+}
+
+.img-comment {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: white;
+
+}
+
+.textarea-comment {
+    width: 90%;
+    height: 60%;
+    resize: none;
+    box-shadow: none;
+    outline: none;
+    background-color: var(--background-color);
+    color: var(--font-color-one)
+}
+
+.textarea-comment:focus {
+    outline: 2px solid #c44a35b4;
+
+}
+
+.offcanvas {
+    height: 30vh !important;
+    background-color: var(--background-color) !important;
+
+}
+
+.offcanvas-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.input-register{
+    padding: 0.05rem !important;
+    border-radius: 1.5rem !important;
+    border: 3px solid #5fa19991 !important;
+    background-color: var(--background-color) !important;
+    color: var(--font-color-one)!important;
+}
+
+.button-go-back-arrow {
+    background: rgb(196, 74, 53);
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+    border-radius: 1rem !important;
+    padding: 0.5rem 1rem 0.4rem 1rem !important;
+    color: white !important;
+}
+
+.button-register-two {
+    background: rgb(196, 74, 53);
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+    border: none;
+    padding: 0.45rem;
+    border-radius: 1.75rem;
+    color: white !important;
+
+}
+
+.button-google-two {
+    background: gray;
+    border: none;
+    padding: 0.45rem;
+    border-radius: 1.75rem;
+    color: white;
+    width: 100%;
 }
 
 @media (orientation: landscape) {
@@ -676,7 +760,7 @@ input[type="submit"] {
         margin: unset !important;
         padding-left: 1rem !important;
         text-shadow: 1px 1px #C44a35, 2px 2px white;
-    
+
         text-align: left !important;
         margin-bottom: 0.5rem !important;
     }
@@ -759,4 +843,9 @@ input[type="submit"] {
     .img-login {
         height: 50vh;
     }
+
+    .offcanvas {
+        height: 40vh !important;
+    }
+
 }
